--- a/JavaProject0/build.gradle
+++ b/JavaProject0/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.apache.poi:poi:5.2.4'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+    implementation 'com.itextpdf:itext7-core:8.0.3'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
